--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "yarn build && netlify deploy --prod"
   },
   "dependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.13.2",
